fixed test-skipping if device connection errors, improved UI display during Test batch running

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,5 +1,5 @@
 <nav class="sidebar bg-dark text-white p-3" style="min-width: 250px; height: 100vh;">
-    <h4 class="mb-4">Network Testkit</h4>
+    <h4 class="mb-4">Roger's Network Tools</h4>
     <ul class="nav flex-column">
         <li class="nav-item">
             <a class="nav-link text-white" href="{{ url_for('credentials') }}">Credentials</a>
