--- a/templates/test_results.html
+++ b/templates/test_results.html
@@ -74,7 +74,7 @@
             </tr>
             <tr class="details-row" id="bgp-{{ test_instance.id }}">
                 <td colspan="5">
-                    <strong>Device:</strong> {{ device.hostname }}<br>
+                    <strong>Device:</strong> {{ device.hostname }} ({{ device.mgmtip }})<br>
                     <strong>Status:</strong>
                     {% if result and result.passed is not none %}
                     {{ "Passed" if result.passed else "Failed" }}
@@ -126,7 +126,7 @@
             </tr>
             <tr class="details-row" id="traceroute-{{ test_instance.id }}">
                 <td colspan="5">
-                    <strong>Device:</strong> {{ device.hostname }}<br>
+                    <strong>Device:</strong> {{ device.hostname }} ({{ device.mgmtip }})<br>
                     <strong>Status:</strong>
                     {% if result and result.passed is not none %}
                     {{ "Passed" if result.passed else "Failed" }}
