changed version to be 1.x

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,5 +5,5 @@
 {% endblock %}
 {% block content %}
 <h1>Roger's Network Tools</h1>
-<h2>Version {{version}}</h2>
+<h2>Version 1.{{version}}</h2>
 {% endblock %}
