--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="sidebar bg-dark text-white p-3" style="min-width: 250px; height: 100vh;">
+<nav class="sidebar bg-dark text-white p-3" style="min-width: 250px; height: calc(100vh - 66px);">
     <h4 class="mb-4">Roger's Network Tools</h4>
     <div class="d-flex flex-column h-100">
         <ul class="nav flex-column">
