fix sidebar layout lower section now displays correctly

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
-<nav class="sidebar bg-dark text-white p-3" style="min-width: 250px; height: calc(100vh - 66px);">
+<nav class="sidebar bg-dark text-white p-3" style="min-width: 250px; height: 100vh;">
     <h4 class="mb-4">Roger's Network Tools</h4>
-    <div class="d-flex flex-column h-100">
+    <div class="d-flex flex-column" style="height: calc(100vh - 100px);">
         <ul class="nav flex-column">
             <li class="nav-item">
                 <a class="nav-link text-white" href="{{ url_for('credentials') }}">Credentials</a>
