add nav for txrxtransceiver and itraceroute tests

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -15,6 +15,13 @@
                 <a class="nav-link text-white" href="{{ url_for('showtests_traceroute') }}">Traceroute Tests</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link text-white" href="{{ url_for('showtests_txrxtransceiver') }}">TxRx SFP Transceiver
+                    Tests</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-white" href="{{ url_for('showtests_itraceroute') }}">ACI itraceroute Tests</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link text-white" href="{{ url_for('run_tests') }}">Run Tests</a>
             </li>
         </ul>
