corrected a few typos

--- a/templates/showtests_txrxtransceiver.html
+++ b/templates/showtests_txrxtransceiver.html
@@ -15,7 +15,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for test in itraceroutetests %}
+        {% for test in txrxtransceivertests %}
         <tr>
             <td>{{ test.id }}</td>
             <td>{{ test.devicehostname.hostname }}</td>
