corrected js brackets

--- a/templates/test_progress.html
+++ b/templates/test_progress.html
@@ -138,9 +138,7 @@
             document.getElementById('itraceroute_skipped').textContent = stats.itraceroute_test.skipped;
             document.getElementById('itraceroute_total').textContent = stats.itraceroute_test.total;
         }
-    }
     });
-
-    });
+    }); // End of DOMContentLoaded
 </script>
 {% endblock %}
